--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,22 @@
+exclude: ^(migrations/|alembic/)
 repos:
   - repo: local
     hooks:
       - id: black
         name: black
-        entry: ./.venv/bin/black ./src
+        entry: ./.venv/bin/black
         language: system
         types: [python]
 
       - id: isort
         name: isort
-        entry: ./.venv/bin/isort ./src
+        entry: ./.venv/bin/isort
         language: system
         types: [python]
 
       - id: flake8
         name: flake8
-        entry: ./.venv/bin/flake8 ./src
+        entry: ./.venv/bin/flake8 
         language: system
         types: [python]
 
