--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ dependencies = [
 requires-python = ">=3.11"
 license = { text = "MIT" }
 
+[tool.pdm.scripts]
+start = "python main.py"
+
 [tool.setuptools]
 py-modules = []
 
